--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.1.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "nx", "sharp"]
   }
 }
