dev: added stagewise

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "esbenp.prettier-vscode",
     "bradlc.vscode-tailwindcss",
     "tht13.html-preview-vscode",
-    "christian-kohler.path-intellisense"
+    "christian-kohler.path-intellisense",
+    "stagewise.stagewise-vscode-extension"
   ]
 }
