move feature flags to backend and implement additional safeguards

--- a/services/backend/convex/tsconfig.json
+++ b/services/backend/convex/tsconfig.json
@@ -20,6 +20,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "../config/featureFlags.ts"],
   "exclude": ["./_generated"]
 }
