--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -24,12 +24,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@stagewise/toolbar-next": "^0.2.0",
+    "@types/luxon": "^3.6.2",
     "@workspace/backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.8",
     "convex-helpers": "^0.1.91",
     "lucide-react": "^0.511.0",
+    "luxon": "^3.6.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
