--- a/package.json
+++ b/package.json
@@ -24,19 +24,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.6",
     "@nx/workspace": "^20.6.1",
+    "@types/node": "^20.17.24",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "nx": "^20.6.1",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.17.24"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.1.8"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "nx", "sharp"],
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild",
+      "nx",
+      "sharp"
+    ],
     "overrides": {
       "@radix-ui/react-dismissable-layer": "1.1.10"
     }
