--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nx run-many --target=dev --projects=@workspace/webapp,@workspace/backend --parallel",
     "setup": "node scripts/setup.js",
     "lint": "biome check .",
-    "lint:fix": "biome check --apply .",
+    "lint:fix": "biome check --write .",
     "format": "biome format .",
     "format:fix": "biome format --write .",
     "typecheck": "nx run-many --target=typecheck --projects=@workspace/webapp,@workspace/backend",
