--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "convex": "^1.24.8",
-    "convex-helpers": "^0.1.96"
+    "convex-helpers": "^0.1.96",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^5.0.0",
