--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@mdx-js/loader": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -27,6 +28,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@types/luxon": "^3.6.2",
+    "@types/mdx": "^2.0.13",
     "@workspace/backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,7 +48,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.5.0",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
