--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -58,6 +58,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "png-to-ico": "^2.1.8",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.1",
     "tailwindcss": "^4",
     "typescript": "^5"
