--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-convex-starter-app",
+  "name": "next-convex-starter-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
