--- a/apps/webapp/project.json
+++ b/apps/webapp/project.json
@@ -16,7 +16,14 @@
       "options": {
         "command": "pnpm dev",
         "cwd": "apps/webapp"
-      }
+      },
+      "continuous": true,
+      "dependsOn": [
+        {
+          "projects": ["@workspace/backend"],
+          "target": "dev"
+        }
+      ]
     },
     "lint": {
       "executor": "nx:run-commands",
