--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nx run-many --target=dev --projects=@workspace/webapp,@workspace/backend --parallel",
+    "dev": "nx run @workspace/webapp:dev",
     "setup": "node scripts/setup.js",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
