--- a/services/backend/project.json
+++ b/services/backend/project.json
@@ -9,7 +9,8 @@
       "options": {
         "command": "pnpm dev",
         "cwd": "services/backend"
-      }
+      },
+      "continuous": true
     }
   },
   "tags": []
