feat: set up Vitest testing framework for frontend and backend
- Install Vitest v4.0.6 and testing dependencies (React Testing Library, jsdom, convex-test)
- Configure Vitest for webapp with React Testing Library and jsdom environment
- Configure Vitest for backend with convex-test and edge-runtime environment
- Add test scripts to package.json files (test, test:watch, test:ui)
- Update nx.json with test target defaults and test:watch configuration
- Create example test file for Button component
- Create comprehensive testing guide in guides/testing/testing.md
- Update README.md with link to testing guide

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -52,15 +55,22 @@
     "@next/mdx": "^15.5.0",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/ui": "^4.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "jsdom": "^27.1.0",
     "png-to-ico": "^2.1.8",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.6"
   }
 }
