--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nx run-many --target=test --projects=@workspace/webapp,@workspace/backend",
+    "test:watch": "nx run-many --target=test:watch --projects=@workspace/webapp,@workspace/backend",
     "dev": "nx run @workspace/webapp:dev",
     "setup": "node scripts/setup.js",
     "lint": "biome check .",
