--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
@@ -39,7 +39,7 @@
     "convex-helpers": "^0.1.104",
     "lucide-react": "^0.511.0",
     "luxon": "^3.6.1",
-    "next": "15.5.2",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.5.0",
+    "@next/mdx": "^16.0.1",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.9.1",
@@ -64,13 +64,13 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/ui": "^4.0.6",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "16.0.1",
     "jsdom": "^27.1.0",
     "png-to-ico": "^2.1.8",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.6"
   }
 }
