--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^8.28.0",
     "convex-test": "^0.0.37",
     "eslint": "^9",
+    "typescript": "^5.9.3",
     "vite": "^6.3.5",
     "vitest": "^4.0.6"
   }
