--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "@biomejs/biome",
       "esbuild",
       "nx",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ],
     "overrides": {
       "@radix-ui/react-dismissable-layer": "1.1.10"
