--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -40,7 +40,7 @@
     "convex-helpers": "^0.1.105",
     "lucide-react": "^0.511.0",
     "luxon": "^3.6.1",
-    "next": "16.0.1",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^16.0.1",
+    "@next/mdx": "16.0.3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.9.1",
@@ -66,7 +66,7 @@
     "@vitest/ui": "^4.0.6",
     "bun": "^1.3.2",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "16.0.3",
     "jsdom": "^27.1.0",
     "png-to-ico": "^2.1.8",
     "remark-gfm": "^4.0.1",
