--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -42,9 +42,9 @@
     "luxon": "^3.6.1",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
+    "react": "19.2.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.2.1",
+    "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
@@ -60,8 +60,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.1",
+    "@types/react-dom": "19.2.1",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/ui": "^4.0.6",
     "bun": "^1.3.2",
