--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -14,11 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: write
+      pull-requests: write
+      issues: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
         with:
-          fetch-depth: 1
+          fetch-depth: 0
 
       - name: Run OpenCode
         uses: anomalyco/opencode/github@latest
