fix: use GITHUB_TOKEN for OpenCode to avoid app permission issues

--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -27,6 +27,7 @@ jobs:
         uses: anomalyco/opencode/github@latest
         with:
           model: opencode/glm-4.7-free
+          github_token: ${{ github.token }}
           prompt: |
             # SYSTEM ROLE & BEHAVIORAL PROTOCOLS
 
