fix: ensure backend dev server starts alongside webapp
- Add task-specific configuration in turbo.json for dev tasks
- @workspace/webapp#dev now depends on @workspace/backend#dev
- Remove --filter from dev script so both services start
- Both backend and webapp logs will now be visible when running pnpm dev

--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,12 @@
       "inputs": ["$TURBO_DEFAULT$"],
       "cache": true
     },
-    "dev": {
+    "@workspace/webapp#dev": {
+      "dependsOn": ["@workspace/backend#dev"],
+      "cache": false,
+      "persistent": true
+    },
+    "@workspace/backend#dev": {
       "cache": false,
       "persistent": true
     }
