--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
-    "dev": "turbo run dev --filter=@workspace/webapp",
+    "dev": "turbo run dev",
     "setup": "node scripts/setup.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
