fix: remove invalid persistent task dependency in turbo.json
Turborepo doesn't allow non-persistent tasks to depend on persistent tasks.
Changed from package-specific dev task config to a shared dev task that runs both packages in parallel.

--- a/turbo.json
+++ b/turbo.json
@@ -26,12 +26,7 @@
       "inputs": ["$TURBO_DEFAULT$"],
       "cache": true
     },
-    "@workspace/webapp#dev": {
-      "dependsOn": ["@workspace/backend#dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "@workspace/backend#dev": {
+    "dev": {
       "cache": false,
       "persistent": true
     }
