chore(dx): replace biome with prettier for code formatting (#26)
Replace biome formatter with prettier to avoid daemon issues that cause
infinite loops and battery drain.

Changes:
- Add prettier (v3.5.0) and remove @biomejs/biome
- Add eslint-config-prettier to disable conflicting ESLint rules
- Create .prettierrc with equivalent settings to biome.json:
  - semi: true, singleQuote: true, trailingComma: es5
  - tabWidth: 2, printWidth: 100
- Create .prettierignore for node_modules, build outputs, etc.
- Update package.json scripts: format/format:fix now use prettier
- Update lint-staged config to use prettier instead of biome

The eslint configuration remains unchanged and continues to handle
linting. Prettier now handles only code formatting.

--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     "setup": "node scripts/setup.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "biome format .",
-    "format:fix": "biome format --write .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "typecheck": "turbo run typecheck",
     "prepare": "husky"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
       "eslint --fix",
-      "biome format --write --no-errors-on-unmatched"
+      "prettier --write"
     ],
-    "**/*.{json,md}": [
-      "biome format --write --no-errors-on-unmatched"
+    "**/*.{json,md,css,scss}": [
+      "prettier --write"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "2.1.2",
     "@convex-dev/eslint-plugin": "^1.1.1",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.17.24",
@@ -37,6 +36,7 @@
     "@typescript-eslint/parser": "^8.49.0",
     "eslint": "^9.26.0",
     "eslint-config-next": "16.1.1",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsdoc": "^61.5.0",
     "eslint-plugin-react": "^7.37.5",
@@ -44,6 +44,7 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "prettier": "^3.5.0",
     "turbo": "^2.4.4",
     "typescript": "^5.9.3"
   },
@@ -52,7 +53,6 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@biomejs/biome",
       "bun",
       "esbuild",
       "sharp",
